--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,6 +1,6 @@
 .cart{
     margin-top: 1.5rem;
-    height: 100vh;
+    min-height: 100vh;
     padding: 20px 40px;
     background-color: pink;
     display: flex;
@@ -10,7 +10,6 @@
 .cart-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: white;
     min-height: 70vh;
@@ -87,7 +86,7 @@
     text-align: center;
     border-radius: 5px;
 }
-.qty-wrapper #cart-item-btn{
+.qty-wrapper .cart-item-btn{
     font-size: 18px;
     font-weight: 800;
     width: 1.5rem;
@@ -96,6 +95,7 @@
     color: white;
     border-radius: 50%;
     border: none;
+    cursor: pointer;
 }
 /* end qty wrapper */
 /* end card */
@@ -106,3 +106,34 @@
     font-weight: 700;
 }
 /* end total price */
+/* remove btn*/
+.remove-btn{
+    text-align: center;
+    font-size: 12px;
+    cursor: pointer;
+}
+/* end remove btn*/
+
+/* checkout btn */
+.checkout-btn{
+    width: 20rem;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    background-color: #222;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+/* end checkout btn */
+
+.btn-to-shop{
+margin-top: 10px;
+padding: 4px 8px;
+border: 2px solid #222;
+background: none;
+border-radius: 5px;
+font-size: 14px;
+cursor: pointer;
+}
